<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_primary">

    <!-- Judul aplikasi -->
    <TextView
        android:id="@+id/laporAirText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lapor_air"
        android:textSize="48sp"
        android:textColor="@color/white"
        android:fontFamily="@font/protest_riot_regular"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"/>

    <!-- Logo -->
    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="136dp"
        android:layout_height="174dp"
        android:layout_marginTop="2dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toBottomOf="@id/laporAirText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Slogan -->
    <TextView
        android:id="@+id/sloganText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setetes_air_bersih_sangat_berarti"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:fontFamily="@font/rubik_one_regular"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/logoImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Teks untuk daftar -->
    <TextView
        android:id="@+id/daftarHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/belum_punya_akun"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="95dp"
        app:layout_constraintTop_toBottomOf="@id/sloganText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnDaftar"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/daftar"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:backgroundTint="@color/white"
        android:layout_marginTop="2dp"
        android:stateListAnimator="@null"
        app:layout_constraintTop_toBottomOf="@id/daftarHint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Teks untuk masuk -->
    <TextView
        android:id="@+id/masukHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sudah_punya_akun"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@id/btnDaftar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnMasuk"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/masuk"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:backgroundTint="@color/white"
        android:layout_marginBottom="120dp"
        android:stateListAnimator="@null"
        app:layout_constraintTop_toBottomOf="@id/masukHint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
